Completed Api List Category

--- a/src/app/core/base/page-title/page-title.component.html
+++ b/src/app/core/base/page-title/page-title.component.html
@@ -1,7 +1,5 @@
 <div class="element-actions">
-  <form class="form-inline justify-content-sm-end">
-    <button class="btn btn-primary btn-sm">Create</button>
-  </form>
+  <ng-content select="thead"></ng-content>
 </div>
 <h6 class="element-header">
   {{ PageTitle }}
