--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,18 @@
 @import '~assets/my-date-picker.scss';
 @import '~assets/libs/fontawesome/css/all.css';
 
+.w-5 {
+  width: 5% !important;
+}
+
+.w-10 {
+  width: 10% !important;
+}
+
+.w-15 {
+  width: 15% !important;
+}
+
 .form-control {
   font-weight: 400;
 }
