--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import '~assets/treebox.scss';
 @import '~assets/my-date-picker.scss';
 @import '~assets/libs/fontawesome/css/all.css';
+@import '~assets/libs/redactor/redactor.min.css';
 
 .w-5 {
   width: 5% !important;
