Completed Api Film Change Category

--- a/src/app/core/base/pagination/pagination.component.html
+++ b/src/app/core/base/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <div class="controls-below-table mt-3" *ngIf="total">
-  <div class="table-records-info">Displaying start - end of total records'</div>
+  <div class="table-records-info">Displaying {{ start }} - {{ end }} of {{ total }} record</div>
   <div class="table-records-pages">
     <ul *ngIf="useLink">
       <li>
