--- a/src/app/main/category/category-list/category-list.component.html
+++ b/src/app/main/category/category-list/category-list.component.html
@@ -19,7 +19,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of dataTable.items let index = index">
+      <tr *ngFor="let item of dataTable.items; let index = index">
         <td class="w-5">{{index+1}}</td>
         <td>{{item.title}}</td>
         <td class="text-center w-15">{{item.createdDate | date:'medium'}}</td>
