--- a/src/app/main/episode/episode-list/episode-list.component.html
+++ b/src/app/main/episode/episode-list/episode-list.component.html
@@ -22,7 +22,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of dataTable.items let index = index">
+      <tr *ngFor="let item of dataTable.items; let index = index">
         <td class="w-5">{{index+1}}</td>
         <td>{{item.title}}</td>
         <td class="text-center w-10">{{item.likeCount}}</td>
