--- a/src/app/main/film/film-create/film-create.component.html
+++ b/src/app/main/film/film-create/film-create.component.html
@@ -7,15 +7,46 @@
           <div class="form-desc"></div>
           <div class="form-group">
             <label for="film-name">Film name</label>
-            <input type="text" id="film-name" class="form-control" placeholder="Enter film name" formControlName="title">
+            <div class="row">
+              <div class="col-8">
+                <input type="text" id="film-name" class="form-control" placeholder="Enter film name" formControlName="title">
+              </div>
+              <div class="col-4 d-flex">
+                <button class="btn btn-primary w-100" (click)="filmSetCategory.open()" type="button">Set categories</button>
+              </div>
+            </div>
+          </div>
+          <div class="form-group" *ngIf="categories.length">
+            <label for="">Categories</label>
+            <table width="100%" class="table table-striped table-lightborder">
+              <thead>
+                <tr>
+                  <th class="w-5 text-center">#</th>
+                  <th>Name</th>
+                  <th class="w-15 text-center">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of categories; let index = index">
+                  <td class="w-5 text-center">{{index+1}}</td>
+                  <td>{{item.title}}</td>
+                  <td class="text-center">
+                    <button class="btn btn-sm btn-link" [id]="item.id" (click)="onDeleteCategory(item.id)"><i class="fal fa-trash-alt"></i></button>
+                  </td>
+                </tr>
+              </tbody>
+              <ng-content select="tbody"></ng-content>
+            </table>
           </div>
           <div class="form-group">
             <label for="film-description">Description</label>
-            <div redactor id="film-description" [redactorOptions]="{ minHeight: '100px', maxHeight: '100px' }" formControlName="description"></div>
+            <div redactor id="film-description" [redactorOptions]="{ minHeight: '100px', maxHeight: '100px' }"
+              formControlName="description"></div>
           </div>
           <div class="form-group">
             <label for="film-content">Content</label>
-            <div redactor id="film-content" [redactorOptions]="{ minHeight: '300px', maxHeight: '300px' }" formControlName="content"></div>
+            <div redactor id="film-content" [redactorOptions]="{ minHeight: '300px', maxHeight: '300px' }"
+              formControlName="content"></div>
           </div>
           <div class="form-group position-relative">
             <label for="film-thumbnail">Thumbnail</label>
@@ -37,3 +68,4 @@
 </div>
 
 <app-preview-assets-storage #previewAssetsStorage (selected)="onSelectAsset($event)"></app-preview-assets-storage>
+<app-film-set-category #filmSetCategory (getCategoryIds)="onSelectCategoryIds($event)"></app-film-set-category>
