--- a/src/app/main/film/film-list/film-list.component.html
+++ b/src/app/main/film/film-list/film-list.component.html
@@ -13,21 +13,30 @@
       <tr>
         <th class="w-5">#</th>
         <th>Title</th>
-        <th class="text-center w-10">Like count</th>
-        <th class="text-center w-10">Follow count</th>
-        <th class="text-center w-10">View count</th>
+        <th class="text-center w-15">Categories</th>
+        <th class="w-10">Social count</th>
         <th class="text-center w-15">Created Date</th>
         <th class="text-center w-15">Updated Date</th>
         <th class="text-center w-10">Action</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of dataTable.items let index = index">
+      <tr *ngFor="let item of dataTable.items; let index = index">
         <td class="w-5">{{index+1}}</td>
         <td>{{item.title}}</td>
-        <td class="text-center w-10">{{item.likeCount}}</td>
-        <td class="text-center w-10">{{item.followCount}}</td>
-        <td class="text-center w-10">{{item.viewCount}}</td>
+        <td class="text-center">
+          <button class="btn btn-success btn-sm text-uppercase btn-badge" (click)="filmChangeCategory.open(item.id)">Total: {{item.categoryFilms.length}} categories</button>
+        </td>
+        <td>
+          Likes:
+          <b>{{item.likeCount}}</b>
+          <br>
+          Follows:
+          <b>{{item.followCount}}</b>
+          <br>
+          Views:
+          <b>{{item.viewCount}}</b>
+        </td>
         <td class="text-center w-15">{{item.createdDate | date:'medium'}}</td>
         <td class="text-center w-15">{{item.updatedDate | date:'medium'}}</td>
         <td class="text-center w-10">
@@ -37,13 +46,10 @@
           <button class="btn btn-sm btn-link" (click)="onDelete(item.id)">
             <i class="fal fa-trash-alt"></i>
           </button>
-          <button class="btn btn-sm btn-link" (click)="filmSetCategory.open()">
-            <i class="fal fa-arrow-alt-to-bottom"></i>
-          </button>
         </td>
       </tr>
     </tbody>
   </app-data-table>
 </div>
 
-<app-film-set-category #filmSetCategory></app-film-set-category>
+<app-film-change-category #filmChangeCategory></app-film-change-category>
