--- a/src/app/core/base/preview-assets-storage/preview-assets-storage.component.css
+++ b/src/app/core/base/preview-assets-storage/preview-assets-storage.component.css
@@ -50,3 +50,11 @@
   -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .1);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .1);
 }
+
+#btn-save-collection {
+  right: 18px !important;
+}
+
+#txtNewCollection {
+  padding-right: 28%;
+}
