--- a/src/app/main/category/category-create/category-create.component.scss
+++ b/src/app/main/category/category-create/category-create.component.scss
@@ -3,6 +3,11 @@
     right: 6px;
 }
 
-#group-button-action {
-    margin-top: 60px;
+#category-thumbnail {
+    padding-right: 75px;
+}
+
+#thumbnail-image {
+    width: 100%;
+    height: 100%;
 }
