--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,14 @@
   min-width: 90% !important;
 }
 
+.r-0 {
+  right: 0 !important;
+}
+
+.text-black {
+  color: #000 !important;
+}
+
 .cursor-pointer {
   cursor: pointer !important;
 }
