--- a/src/app/main/episode/episode-create/episode-create.component.html
+++ b/src/app/main/episode/episode-create/episode-create.component.html
@@ -35,9 +35,9 @@
           </div>
           <div class="form-group position-relative">
             <label for="episode-thumbnail">Thumbnail</label>
-            <input type="text" id="episode-thumbnail" class="form-control position-absolute" placeholder="Select thumbnail"
-              (click)="previewAssetsStorage.open(fileType.image)">
-            <button class="btn btn-sm btn-danger position-absolute" id="remove-thumbnail-episode">Remove</button>
+            <div (click)="previewAssetsStorage.open(fileType.image)">
+              <app-select-image [image]="thumbnail"></app-select-image>
+            </div>
           </div>
           <div class="form-group mt-5" id="preview-episode-thumbnail-image" *ngIf="isHidePreviewEpisodeThumbnailImage">
             <img src="../../../../assets/imgs/empty-image.png">
