--- a/src/app/main/film/film-create/film-create.component.html
+++ b/src/app/main/film/film-create/film-create.component.html
@@ -50,9 +50,9 @@
           </div>
           <div class="form-group position-relative">
             <label for="film-thumbnail">Thumbnail</label>
-            <input type="text" id="film-thumbnail" class="form-control position-absolute" placeholder="Select thumbnail"
-              (click)="previewAssetsStorage.open(fileType.image)">
-            <button class="btn btn-sm btn-danger position-absolute" id="remove-thumbnail-film">Remove</button>
+            <div (click)="previewAssetsStorage.open(fileType.image)">
+              <app-select-image [image]="thumbnail"></app-select-image>
+            </div>
           </div>
           <div class="form-group mt-5" id="preview-film-thumbnail-image" *ngIf="isHidePreviewFilmThumbnailImage">
             <img src="../../../../assets/imgs/empty-image.png">
