Completed Function General Settings And Fix Bug Preview Assets

--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -107,6 +107,27 @@
                 </div>
               </div>
             </li>
+            <li class="has-sub-menu">
+              <a class="pointer cursor-pointer">
+                <div class="icon-w">
+                  <i class="fal fa-book"></i>
+                </div>
+                <span>Settings</span>
+              </a>
+              <div class="sub-menu-w">
+                <div class="sub-menu-header">Settings</div>
+                <div class="sub-menu-i">
+                  <ul class="sub-menu">
+                    <li>
+                      <a [routerLink]="['/settings/general']">Customize</a>
+                    </li>
+                    <li>
+                      <a [routerLink]="['/settings/menu']">Menu</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
         <div class="content-w">
